@@ -31,9 +31,13 @@ import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 
 import de.cismet.cids.dynamics.CidsBean;
+
+import de.cismet.verdis.commons.constants.VerdisConstants;
 
 /**
  * DOCUMENT ME!
@@ -76,21 +80,6 @@ public class CidsBeanSupport {
      * @throws  Exception  DOCUMENT ME!
      */
     public static void deepcopyAllProperties(final CidsBean sourceBean, final CidsBean targetBean) throws Exception {
-        deepcopyAllProperties(sourceBean, targetBean, false);
-    }
-
-    /**
-     * DOCUMENT ME!
-     *
-     * @param   sourceBean        DOCUMENT ME!
-     * @param   targetBean        DOCUMENT ME!
-     * @param   cleanCollections  DOCUMENT ME!
-     *
-     * @throws  Exception  DOCUMENT ME!
-     */
-    public static void deepcopyAllProperties(final CidsBean sourceBean,
-            final CidsBean targetBean,
-            final boolean cleanCollections) throws Exception {
         if ((sourceBean == null) || (targetBean == null)) {
             return;
         }
@@ -105,46 +94,73 @@ public class CidsBeanSupport {
             } else if (o instanceof CidsBean) {
                 targetBean.setProperty(propName, deepcloneCidsBean((CidsBean)o));
             } else if (o instanceof Collection) {
-                final List<CidsBean> list = (List<CidsBean>)o;
+                final List<CidsBean> sourceList = (List<CidsBean>)o;
                 final List<CidsBean> targetList = targetBean.getBeanCollectionProperty(propName);
 
-                final List<CidsBean> toAdd = new ArrayList<CidsBean>(list);
-                toAdd.removeAll(targetList);
-
-                final List<CidsBean> toRemove = new ArrayList<CidsBean>(targetList);
-                toRemove.removeAll(list);
-
-//                targetList.retainAll(list);
-//                list.removeAll(targetList);
-
-                final HashMap<Integer, CidsBean> origTargetMap = new HashMap<Integer, CidsBean>();
-                final List<CidsBean> toUpdateTarget = new ArrayList<CidsBean>(targetList);
-                toUpdateTarget.retainAll(list);
-                for (final CidsBean cidsBean : toUpdateTarget) {
-                    origTargetMap.put(cidsBean.getMetaObject().getId(), cidsBean);
+                final Map<Integer, CidsBean> sourceIdToBeanMap = new HashMap<Integer, CidsBean>();
+                for (final CidsBean cidsBean : sourceList) {
+                    sourceIdToBeanMap.put(cidsBean.getMetaObject().getId(), cidsBean);
                 }
 
-                final HashMap<Integer, CidsBean> origArrayMap = new HashMap<Integer, CidsBean>();
-                final List<CidsBean> toUpdateOrig = new ArrayList<CidsBean>(list);
-                toUpdateOrig.retainAll(targetList);
-                for (final CidsBean cidsBean : toUpdateOrig) {
-                    origArrayMap.put(cidsBean.getMetaObject().getId(), cidsBean);
+                final Map<Integer, CidsBean> targetIdToBeanMap = new HashMap<Integer, CidsBean>();
+                for (final CidsBean cidsBean : targetList) {
+                    targetIdToBeanMap.put(cidsBean.getMetaObject().getId(), cidsBean);
                 }
 
-                for (final Integer id : origArrayMap.keySet()) {
-                    final CidsBean origArrayBean = origArrayMap.get(id);
-                    final CidsBean targetArrayBean = origTargetMap.get(id);
-                    deepcopyAllProperties(origArrayBean, targetArrayBean);
+                final Collection<Integer> sourceIds = sourceIdToBeanMap.keySet();
+                final Collection<Integer> targetIds = targetIdToBeanMap.keySet();
+
+                final Collection<Integer> toAdd = new HashSet<Integer>();
+                final Collection<Integer> toRemove = new HashSet<Integer>();
+                final Collection<Integer> toUpdate = new HashSet<Integer>();
+
+                // all ids that are in both lists
+                // source: A B _
+                // target: _ B C
+                // update: _ B _
+                toUpdate.addAll(sourceIds);
+                toUpdate.addAll(targetIds);
+                toUpdate.retainAll(sourceIds);
+                toUpdate.retainAll(targetIds);
+
+                // add all ids that are in the source list
+                // except the ones who are already in the update list
+                // source: _ B C
+                // update: _ B _
+                // add   : _ _ C
+                toAdd.addAll(sourceIds);
+                toAdd.removeAll(toUpdate);
+
+                // remove all ids that are in the target list
+                // except the ones who are already in the update list
+                // target: A B _
+                // update: _ B _
+                // remove: A _ _
+                toRemove.addAll(targetIds);
+                toRemove.removeAll(toUpdate);
+
+                // lists are now:
+                // update: _ B _
+                // add   : _ _ C
+                // remove: A _ _
+
+                for (final Integer id : toRemove) {
+                    targetList.remove(sourceIdToBeanMap.get(id));
                 }
 
-                targetList.removeAll(toRemove);
-                targetList.addAll(toAdd);
+                for (final Integer id : toAdd) {
+                    targetList.add(sourceIdToBeanMap.get(id));
+                }
+
+                for (final Integer id : toUpdate) {
+                    deepcopyAllProperties(sourceIdToBeanMap.get(id), targetIdToBeanMap.get(id));
+                }
             } else if (o instanceof Geometry) {
                 targetBean.setProperty(propName, ((Geometry)o).clone());
             } else if (o instanceof Float) {
                 targetBean.setProperty(propName, new Float(o.toString()));
             } else if (o instanceof Boolean) {
-                targetBean.setProperty(propName, new Boolean(o.toString()));
+                targetBean.setProperty(propName, Boolean.valueOf(o.toString()));
             } else if (o instanceof Long) {
                 targetBean.setProperty(propName, new Long(o.toString()));
             } else if (o instanceof Double) {
@@ -164,6 +180,7 @@ public class CidsBeanSupport {
                 targetBean.setProperty(propName, o);
             }
         }
+        targetBean.getMetaObject().forceStatus(sourceBean.getMetaObject().getStatus());
     }
 
     /**
